--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <h2>What's different about Manage?</h2>
                     <p>Manage provides all the functionality your team needs, without the complexity. Our software is tailor-made for modern digital product teams</p>
                 </article>
-                <article>
+                <article class="reasons">
                     <div class="frame">
                         <div class="cajabutton"><a class="button" href="#">01</a></div>
                         <div class="texto">
